--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -17,6 +17,23 @@
             @include span-columns(12);
         }
 
+        .form_input_name, .form_input_email, .form_input_message {
+            @include span-columns(12);
+
+            input {
+                @include span-columns(12);
+                max-width: unset !important;
+                background-color: transparent !important;
+                border-top: none !important;
+                border-left: none !important;
+                border-right: none !important;
+                border-bottom: 1px solid #fff !important;
+                padding: 10px 10px 10px 24px !important;
+                color: $white !important;
+                margin-bottom: 20px !important;
+            }
+        }
+
         .form_input_name{
             position: relative;
             &:before {
@@ -55,66 +72,50 @@
                 top: 19px;
             }
         }
-    }
 
-    .form_input_name, .form_input_email, .form_input_message {
-        @include span-columns(12);
+        textarea {
+            color: $white !important;
+            background: transparent !important;
+            border-top: none !important;
+            border-left: none !important;
+            border-right: none !important;
+            border-bottom: 1px solid #fff !important;
+            padding: 10px 10px 10px 24px !important;
+            margin-bottom: 20px !important;
+        }
 
-        input {
+        .front_page_submit {
             @include span-columns(12);
-            max-width: unset;
-            background-color: transparent;
-            border-top: none;
-            border-left: none;
-            border-right: none;
-            border-bottom: 1px solid #fff;
-            padding: 10px 10px 10px 24px;
-            color: $white;
-            margin-bottom: 20px;
-        }
-    }
+            background-color: transparent !important;
+            color: $white !important;
+            padding: 15px 0 !important;
+            border-radius: 3px !important;
+            -webkit-border-radius: 3px !important;
+            -moz-border-radius: 3px !important;
+            font-size: 16px  !important;
+            text-transform: uppercase !important;
+            border: 1px solid $white !important;
+            text-align: center !important;
 
-    textarea {
-        color: $white;
-        background: transparent;
-        border-top: none;
-        border-left: none;
-        border-right: none;
-        border-bottom: 1px solid #fff;
-        padding: 10px 10px 10px 24px;
-        margin-bottom: 20px;
-    }
+            @include media($tablet){
+                padding: 12px 0 !important;
+            }
 
-    .front_page_submit {
-        @include span-columns(12);
-        background-color: transparent;
-        color: $white;
-        padding: 15px 0;
-        border-radius: 3px;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        font-size: 16px;
-        text-transform: uppercase;
-        border: 1px solid $white;
-        text-align: center;
+            @include media($mobile){
+                font-size: 14px !important;
+                padding: 10px 0 !important;
+            }
 
-        @include media($tablet){
-            padding: 12px 0;
-        }
+            @include media($smallMobile){
+                padding: 8px 0 !important;
+                font-size: 13px !important;
+            }
 
-        @include media($mobile){
-            font-size: 14px;
-            padding: 10px 0;
-        }
+            &:hover {
+                color: $darkBlue !important;
+                background: $white !important;
+            }
 
-        @include media($smallMobile){
-            padding: 8px 0;
-            font-size: 13px;
-        }
-
-        &:hover {
-            color: $darkBlue;
-            background: $white;
         }
 
     }
@@ -123,9 +124,14 @@
         margin-bottom: 0;
 
         p {
-            color:$black;
-            font-size: 16px;
+            color:$black !important;
+            font-size: 16px !important;
         }
+    }
+
+    div.wpforms-container-full .wpforms-form label.wpforms-error {
+        background: $white !important;
+        padding: 0 10px !important;
     }
 
 }
