--- a/css/main.css
+++ b/css/main.css
@@ -1411,7 +1411,7 @@ body {
 .full_width {
   float: left;
   display: block;
-  margin-right: 2.3576515979%;
+  margin-right: 2.35765%;
   width: 100%; }
   .full_width:last-child {
     margin-right: 0; }
@@ -1524,7 +1524,7 @@ h2 {
     .social_media_section .column .image_wrap {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%;
       padding: 0 32% 10px; }
       .social_media_section .column .image_wrap:last-child {
@@ -1763,7 +1763,7 @@ p, a {
 #global_header {
   float: left;
   display: block;
-  margin-right: 2.3576515979%;
+  margin-right: 2.35765%;
   width: 100%;
   z-index: 999;
   background: #fff;
@@ -1863,7 +1863,7 @@ p, a {
   #global_header nav {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%;
     width: auto;
     float: right; }
@@ -1873,14 +1873,14 @@ p, a {
       #global_header nav {
         float: left;
         display: block;
-        margin-right: 7.4229703521%;
+        margin-right: 7.42297%;
         width: 100%; }
         #global_header nav:last-child {
           margin-right: 0; } }
   #global_header ul {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%; }
     #global_header ul:last-child {
       margin-right: 0; }
@@ -2040,14 +2040,14 @@ p, a {
   #global_footer .column ul {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%; }
     #global_footer .column ul:last-child {
       margin-right: 0; }
     #global_footer .column ul li {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%;
       padding-left: 20px;
       font-family: 'Lato Regular'; }
@@ -2088,14 +2088,14 @@ p, a {
   #global_footer .column .contact_info {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%; }
     #global_footer .column .contact_info:last-child {
       margin-right: 0; }
     #global_footer .column .contact_info a {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%;
       color: #fff;
       padding-left: 45px;
@@ -2174,7 +2174,7 @@ p, a {
   .form_wrap .front_page_contact {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%;
     margin-bottom: 0; }
     .form_wrap .front_page_contact:last-child {
@@ -2182,21 +2182,21 @@ p, a {
     .form_wrap .front_page_contact .wpforms-field-container, .form_wrap .front_page_contact form {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%; }
       .form_wrap .front_page_contact .wpforms-field-container:last-child, .form_wrap .front_page_contact form:last-child {
         margin-right: 0; }
     .form_wrap .front_page_contact .form_input_name, .form_wrap .front_page_contact .form_input_email, .form_wrap .front_page_contact .form_input_message {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%; }
       .form_wrap .front_page_contact .form_input_name:last-child, .form_wrap .front_page_contact .form_input_email:last-child, .form_wrap .front_page_contact .form_input_message:last-child {
         margin-right: 0; }
       .form_wrap .front_page_contact .form_input_name input, .form_wrap .front_page_contact .form_input_email input, .form_wrap .front_page_contact .form_input_message input {
         float: left;
         display: block;
-        margin-right: 2.3576515979%;
+        margin-right: 2.35765%;
         width: 100%;
         max-width: unset !important;
         background-color: transparent !important;
@@ -2251,7 +2251,7 @@ p, a {
     .form_wrap .front_page_contact .front_page_submit {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%;
       background-color: transparent !important;
       color: #fff !important;
@@ -2291,7 +2291,7 @@ p, a {
 .home {
   float: left;
   display: block;
-  margin-right: 2.3576515979%;
+  margin-right: 2.35765%;
   width: 100%;
   /*
   .three_column_section {
@@ -2346,7 +2346,7 @@ p, a {
   .home h2 {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%;
     text-align: center;
     color: #143e57; }
@@ -2358,7 +2358,7 @@ p, a {
   .home .button_wrap {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%;
     margin-top: 10px; }
     .home .button_wrap:last-child {
@@ -2366,7 +2366,7 @@ p, a {
   .home .top_section {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%;
     background: url("../images/home-hero.jpg") no-repeat;
     background-size: cover;
@@ -2414,7 +2414,7 @@ p, a {
     .home .top_section p {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%;
       font-family: 'Lato Light';
       font-size: 22px;
@@ -2459,7 +2459,7 @@ p, a {
     .home .column_section .projects {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%;
       background-color: #929292; }
       .home .column_section .projects:last-child {
@@ -2467,7 +2467,7 @@ p, a {
       .home .column_section .projects .projects_section {
         float: left;
         display: block;
-        margin-right: 2.3576515979%;
+        margin-right: 2.35765%;
         width: 100%;
         padding-bottom: 40px;
         background: #fff; }
@@ -2476,7 +2476,7 @@ p, a {
         .home .column_section .projects .projects_section .projects_wrap {
           float: left;
           display: block;
-          margin-right: 2.3576515979%;
+          margin-right: 2.35765%;
           width: 100%; }
           .home .column_section .projects .projects_section .projects_wrap:last-child {
             margin-right: 0; }
@@ -2509,7 +2509,7 @@ p, a {
           .home .column_section .projects .projects_section .column_project .content {
             float: left;
             display: block;
-            margin-right: 2.3576515979%;
+            margin-right: 2.35765%;
             width: 100%;
             transition: all 0.5s; }
             .home .column_section .projects .projects_section .column_project .content:last-child {
@@ -2577,7 +2577,7 @@ p, a {
   .home .skills_section {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%;
     background: #f8f8f8;
     padding: 40px 0 80px;
@@ -2591,7 +2591,7 @@ p, a {
     .home .skills_section .two_column_section {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%;
       margin-top: 40px;
       			/*display: -webkit-box;
@@ -2610,15 +2610,15 @@ p, a {
         .home .skills_section .two_column_section {
           float: left;
           display: block;
-          margin-right: 7.4229703521%;
+          margin-right: 7.42297%;
           width: 100%; }
           .home .skills_section .two_column_section:last-child {
             margin-right: 0; } }
     .home .skills_section .column {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
-      width: 48.821174201%;
+      margin-right: 2.35765%;
+      width: 48.82117%;
       text-align: left;
       /*display: -webkit-box;
       display: -ms-flexbox;
@@ -2638,14 +2638,14 @@ p, a {
         .home .skills_section .column {
           float: left;
           display: block;
-          margin-right: 7.4229703521%;
+          margin-right: 7.42297%;
           width: 100%; }
           .home .skills_section .column:last-child {
             margin-right: 0; } }
       .home .skills_section .column .column_content {
         float: left;
         display: block;
-        margin-right: 2.3576515979%;
+        margin-right: 2.35765%;
         width: 100%;
         height: 100%;
         padding-bottom: 30px; }
@@ -2657,14 +2657,14 @@ p, a {
       .home .skills_section .column h4 {
         float: left;
         display: block;
-        margin-right: 2.3576515979%;
+        margin-right: 2.35765%;
         width: 100%; }
         .home .skills_section .column h4:last-child {
           margin-right: 0; }
       .home .skills_section .column ul {
         float: left;
         display: block;
-        margin-right: 2.3576515979%;
+        margin-right: 2.35765%;
         width: 100%;
         list-style-type: disc;
         padding-left: 20px; }
@@ -2673,7 +2673,7 @@ p, a {
         .home .skills_section .column ul li {
           float: left;
           display: block;
-          margin-right: 2.3576515979%;
+          margin-right: 2.35765%;
           width: 100%;
           display: list-item; }
           .home .skills_section .column ul li:last-child {
@@ -2681,7 +2681,7 @@ p, a {
         .home .skills_section .column ul h5 {
           float: left;
           display: block;
-          margin-right: 2.3576515979%;
+          margin-right: 2.35765%;
           width: 100%;
           font-family: 'Lato Bold Italic';
           margin: 0;
@@ -2739,7 +2739,7 @@ p, a {
       .home .about_section {
         float: left;
         display: block;
-        margin-right: 3.5786636068%;
+        margin-right: 3.57866%;
         width: 100%; }
         .home .about_section:last-child {
           margin-right: 0; } }
@@ -2761,7 +2761,7 @@ p, a {
         .home .about_section .column {
           float: left;
           display: block;
-          margin-right: 3.5786636068%;
+          margin-right: 3.57866%;
           width: 100%; }
           .home .about_section .column:last-child {
             margin-right: 0; } }
@@ -2832,7 +2832,7 @@ p, a {
   .single_project .page_divider {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%;
     height: 4px;
     background: #143e57;
@@ -2860,7 +2860,7 @@ p, a {
   .single_project nav {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%;
     padding: 20px 0; }
     .single_project nav:last-child {
@@ -2967,7 +2967,7 @@ p, a {
 .contact {
   float: left;
   display: block;
-  margin-right: 2.3576515979%;
+  margin-right: 2.35765%;
   width: 100%;
   text-align: center;
   padding-bottom: 40px; }
@@ -2976,7 +2976,7 @@ p, a {
   .contact .top_section {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%;
     text-align: center;
     color: #fff; }
@@ -3048,14 +3048,14 @@ p, a {
 .about {
   float: left;
   display: block;
-  margin-right: 2.3576515979%;
+  margin-right: 2.35765%;
   width: 100%; }
   .about:last-child {
     margin-right: 0; }
   .about .top_section {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
+    margin-right: 2.35765%;
     width: 100%;
     text-align: left;
     background: #fff;
@@ -3069,7 +3069,7 @@ p, a {
     .about .top_section h2 {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%;
       text-align: center; }
       .about .top_section h2:last-child {
@@ -3094,7 +3094,7 @@ p, a {
     .about .middle_section h2 {
       float: left;
       display: block;
-      margin-right: 2.3576515979%;
+      margin-right: 2.35765%;
       width: 100%;
       color: #fff; }
       .about .middle_section h2:last-child {
